--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+.login-container button{
+  background-color: blue;
+  font-size: 1rem;
+  width:100px;
+  height:30px;
+  border-radius: 10px;
+  color: aliceblue;
+  border-color: transparent;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login-container{
+  justify-self: center;
+  position: relative;
+  top:150px
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.login-container input{
+  border-color: black;
+  border-radius: 10px;
+  height: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.signup-container button{
+  background-color: blue;
+  font-size: 1rem;
+  width:100px;
+  height:50px;
+  border-radius: 10px;
+  color: aliceblue;
+  border-color: transparent;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  
 }
 
-.App-link {
-  color: #61dafb;
+.signup-container{
+  justify-self: center;
+  position: relative;
+  top:50px
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.signup-container input{
+  border-color: black;
+  border-radius: 10px;
+  height: 30px;
 }
+
